Optimize Deployment: Exclude heavy files (REAL FIX)

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,16 +7,25 @@ on:
 
 jobs:
   web-deploy:
-    name:  Deploy
+    name: 🎉 Deploy
     runs-on: ubuntu-latest
     steps:
-      - name:  Get latest code
-        uses: actions/checkout@v3
-
-      - name:  Sync files
+      - name: 🚚 Get latest code
+        uses: actions/checkout@v4
+      
+      - name: 📂 Sync files
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
         with:
           server: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           server-dir: ./
+          exclude: |
+            **/.git*
+            **/.git*/**
+            **/node_modules/**
+            **/venv/**
+            **/.streamlit/**
+            **/__pycache__/**
+            SOLUCION_DB.sql
+            README.md
