Fix: Add index.html and simplify path to root

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,8 @@ jobs:
           server: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
-          server-dir: domains/semhys.com/public_html/
+          # FIX: Simplified path to root to ensure visibility
+          server-dir: ./
           exclude: |
             **/.git*
             **/.github*
