--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
           server: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
-          # FINAL FIX: Standard public_html path for main domain
+          # FIX: Explicit public_html folder
           server-dir: public_html/
           exclude: |
             **/.git*
