FIX: Force clean slate resync to public_html

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,16 +1,22 @@
-name: Deploy Hostinger
-on: push
+name: Despliegue a Hostinger
+on:
+  push:
+    branches:
+      - main
 jobs:
   web-deploy:
+    name: 🎉 Deploy
     runs-on: ubuntu-latest
     steps:
-    - name: 🚚 Get latest code
-      uses: actions/checkout@v4
-
-    - name: 📂 Sync with Hostinger
-      uses: SamKirkland/FTP-Deploy-Action@v4.3.4
-      with:
-        server: ${{ secrets.FTP_SERVER }}
-        username: ${{ secrets.FTP_USERNAME }}
-        password: ${{ secrets.FTP_PASSWORD }}
-        server-dir: public_html/
+      - name: 🚚 Obtener el código más reciente
+        uses: actions/checkout@v4
+      - name: 📂 Sincronizar archivos con Hostinger
+        uses: SamKirkland/FTP-Deploy-Action@v4.3.4
+        with:
+          server: ${{ secrets.FTP_SERVER }}
+          username: ${{ secrets.FTP_USERNAME }}
+          password: ${{ secrets.FTP_PASSWORD }}
+          # Path configuration
+          server-dir: public_html/
+          # FORCE UPLOAD: Ignore state and overwrite everything
+          dangerous-clean-slate: true
