Fix: Re-enable public_html path (safely)

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,9 +16,9 @@ jobs:
           server: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
-          # BACK TO ROBUST CONFIG: Root path (known working)
-          server-dir: ./
-          # SAFETY: Disable delete mode
+          # FIX: Reverting to the only path that connected successfully
+          server-dir: public_html/
+          # SAFETY: Disabled clean-slate to prevent wiping
           dangerous-clean-slate: false
           exclude: |
             **/.git*
