Update Project ID and fix remaining mobile layout issues

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit
-supabase
-langchain-community
-langchain-openai
-python-dotenv
+fastapi
+uvicorn
+google-cloud-aiplatform
+vertexai
+pydantic
