--- a/.github/workflows/deploy_hostinger.yml
+++ b/.github/workflows/deploy_hostinger.yml
@@ -18,22 +18,31 @@ jobs:
           echo "commit=${GITHUB_SHA}" > deploy_probe.txt
           echo "date=$(date -u)" >> deploy_probe.txt
 
-      - name: Deploy to Hostinger via SFTP
-        uses: wlixcc/SFTP-Deploy-Action@v1.2.4
+      - name: Sync with Hostinger (SamKirkland)
+        uses: SamKirkland/FTP-Deploy-Action@v4.3.5
         with:
-          username: ${{ secrets.HOSTINGER_SFTP_USER }}
           server: ${{ secrets.HOSTINGER_SFTP_HOST }}
+          username: ${{ secrets.HOSTINGER_SFTP_USER }}
           password: ${{ secrets.HOSTINGER_SFTP_PASS }}
           port: ${{ secrets.HOSTINGER_SFTP_PORT }}
-          local_path: './'
-          remote_path: '/home/u726518692/domains/semhys.com/public_html/'
-          sftp_only: true
-          # Exclude backend and dev files
-          ignore_regex: '^(semhys-agents/|\.git/|\.github/|\.env|.*\.py$|.*\.md$|.*\.sh$|.*\.ps1$|.*\.txt$|.*\.log$)'
+          protocol: sftp
+          server-dir: domains/semhys.com/public_html/
+          exclude: |
+            **/.git*
+            **/.git*/**
+            **/node_modules/**
+            semhys-agents/**
+            .env
+            .venv/**
+            *.py
+            *.md
+            *.sh
+            *.ps1
+            *.log
 
       - name: Verify live probe
         run: |
           echo "---- LIVE PROBE VERIFICATION ----"
-          sleep 5
+          sleep 10
           curl -s --fail https://semhys.com/deploy_probe.txt || echo "::warning::Probe check failed (DNS/Cache delay?)"
           echo ""
