--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     environment:
       - PORT=8080
       - GOOGLE_APPLICATION_CREDENTIALS=/app/gcp-key.json
-      - PROJECT_ID=semhys-chat
+      - PROJECT_ID=gen-lang-client-0585991170
       - WEB_CONCURRENCY=2
     volumes:
       - ./gcp-key.json:/app/gcp-key.json:ro
